--- a/starter/package.json
+++ b/starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,8 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.7.5"
   }
 }
