--- a/starter/package.json
+++ b/starter/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
