--- a/starter/package.json
+++ b/starter/package.json
@@ -12,10 +12,12 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^4.12.1",
     "mongoose": "^6.7.5"
   }
 }
